# human_aware_robot_navigation

./: .gitignore  README.md  SETUP.md  requirements.txt
ROS/src/Freight-ROS-Unity/freight_intent_recognition/: CMakeLists.txt  package.xml
ROS/src/Freight-ROS-Unity/freight_intent_recognition/config/: intent_recognition_model.rhn  params.yaml
ROS/src/Freight-ROS-Unity/freight_intent_recognition/launch/: intent.launch
ROS/src/Freight-ROS-Unity/freight_intent_recognition/scripts/: intent_recognition.py
ROS/src/Freight-ROS-Unity/freight_navigation/: CMakeLists.txt  package.xml
ROS/src/Freight-ROS-Unity/freight_navigation/config/: rviz_config.rviz
ROS/src/Freight-ROS-Unity/freight_navigation/data/: abc.txt
ROS/src/Freight-ROS-Unity/freight_navigation/data/urdf/: freight.urdf  freight.urdf.xacro  frieght.xacro
ROS/src/Freight-ROS-Unity/freight_navigation/launch/: navigation.launch
ROS/src/Freight-ROS-Unity/freight_navigation/msg/: NavIntent.msg
ROS/src/Freight-ROS-Unity/freight_navigation/scripts/: navigation.py
ROS/src/Freight-ROS-Unity/freight_talkback/: CMakeLists.txt  package.xml
ROS/src/Freight-ROS-Unity/freight_talkback/launch/: talkback.launch
ROS/src/Freight-ROS-Unity/freight_talkback/scripts/: talkback.py
ROS/src/Freight-ROS-Unity/freight_unity_endpoint/: CMakeLists.txt  package.xml
ROS/src/Freight-ROS-Unity/freight_unity_endpoint/config/: params.yaml
ROS/src/Freight-ROS-Unity/freight_unity_endpoint/launch/: server.launch
ROS/src/Freight-ROS-Unity/freight_unity_endpoint/scripts/: server_endpoint.py
ROS/src/Gopher-ROS-Unity/: .gitignore  .gitmodules  README.md
ROS/src/Gopher-ROS-Unity/gopher_control/: CMakeLists.txt  package.xml
ROS/src/Gopher-ROS-Unity/gopher_description/launch/: view_model.launch
ROS/src/Gopher-ROS-Unity/gopher_description/robots/: gen3_robotiq_2f_85.xacro  gopher.xacro  kortex_robot.xacro
ROS/src/Gopher-ROS-Unity/gopher_description/rviz/: model.rviz
ROS/src/Gopher-ROS-Unity/gopher_move_it/gen3_robotiq_2f_85_move_it_config/: CMakeLists.txt  package.xml
ROS/src/Gopher-ROS-Unity/gopher_move_it/gen3_robotiq_2f_85_move_it_config/src/: robot_model_and_robot_state_tutorial.cpp
ROS/src/Gopher-ROS-Unity/gopher_move_it/gopher_move_it_config/: CMakeLists.txt  package.xml
ROS/src/Gopher-ROS-Unity/gopher_move_it/gopher_move_it_config/launch/: kinova_move_it.launch
ROS/src/Gopher-ROS-Unity/gopher_move_it/gopher_move_it_config/msg/: Joints.msg
ROS/src/Gopher-ROS-Unity/gopher_move_it/gopher_move_it_config/src/: plan_trajectory.py
ROS/src/Gopher-ROS-Unity/gopher_move_it/gopher_move_it_config/srv/: PlanTrajectory.srv
ROS/src/Gopher-ROS-Unity/gopher_navigation/: CMakeLists.txt  package.xml
ROS/src/Gopher-ROS-Unity/gopher_navigation/config/: baseline_costmap_common_params.yaml  baseline_global_costmap_params.yaml  baseline_local_costmap_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  social_costmap_common_params.yaml  social_global_costmap_params.yaml  social_local_costmap_params.yaml  teb_local_planner_params.yaml
ROS/src/Gopher-ROS-Unity/gopher_navigation/launch/: gopher_amcl.launch  gopher_gmapping.launch  gopher_presence_gmapping.launch
ROS/src/Gopher-ROS-Unity/gopher_navigation/maps/: hospital.pgm  hospital.yaml  hospital_map.pgm  hospital_map.yaml  sample_map.pgm  sample_map.yaml  trial1_map.pgm  trial1_map.yaml
ROS/src/Gopher-ROS-Unity/gopher_navigation/scripts/: experiment_1.py  experiment_2.py  experiment_3.py  path_length.py  social_distance.py
ROS/src/Gopher-ROS-Unity/gopher_unity_endpoint/: CMakeLists.txt  package.xml
ROS/src/Gopher-ROS-Unity/gopher_unity_endpoint/launch/: gopher_presence_server.launch  gopher_server.launch  kinova_server.launch
ROS/src/Gopher-ROS-Unity/gopher_unity_endpoint/rviz/: gopher_presence_config_baseline.rviz  gopher_presence_config_social.rviz  gopher_presence_rviz_config.rviz  gopher_rviz_config.rviz  kinova_rviz_config.rviz
ROS/src/Gopher-ROS-Unity/human_aware_navigation/dynamic_social_costmap/: CMakeLists.txt
ROS/src/Gopher-ROS-Unity/human_aware_navigation/people_detection/: CMakeLists.txt
ROS/src/Gopher-ROS-Unity/human_aware_navigation/people_prediction/: CMakeLists.txt
ROS/src/Gopher-ROS-Unity/lattice_planner/: CMakeLists.txt  package.xml
ROS/src/Gopher-ROS-Unity/lattice_planner/config/: global_planner_params.yaml
ROS/src/Gopher-ROS-Unity/people/face_detector/: CMakeLists.txt
ROS/src/Gopher-ROS-Unity/people/people/: package.xml
ROS/src/Gopher-ROS-Unity/people/people_msgs/: CMakeLists.txt
ROS/src/Gopher-ROS-Unity/people/people_tracking_filter/: CMakeLists.txt
ROS/src/Gopher-ROS-Unity/timed_path_follower/: CMakeLists.txt  Doxyfile  LICENSE  README.md  mainpage.dox  package.xml  path_follower_plugin.xml
ROS/src/Gopher-ROS-Unity/timed_path_follower/cfg/: PathFollower.cfg
ROS/src/Gopher-ROS-Unity/timed_path_follower/config/: local_planner_params.yaml
ROS/src/Gopher-ROS-Unity/timed_path_follower/doc/: howto
ROS/src/Gopher-ROS-Unity/timed_path_follower/include/timed_path_follower/: path_follower.h
ROS/src/Gopher-ROS-Unity/timed_path_follower/src/: path_follower.cpp
ROS/src/Gopher-ROS-Unity/wu_ros_tools/easy_markers/: CMakeLists.txt  package.xml
ROS/src/Gopher-ROS-Unity/wu_ros_tools/easy_markers/scripts/: interactive_marker_demo.py  std_marker_demo.py
ROS/src/Gopher-ROS-Unity/wu_ros_tools/easy_markers/src/easy_markers/: generator.py  interactive.py
ROS/src/Gopher-ROS-Unity/wu_ros_tools/joy_listener/: CMakeLists.txt  package.xml
ROS/src/Gopher-ROS-Unity/wu_ros_tools/joy_listener/src/joy_listener/: __init__.py
ROS/src/Gopher-ROS-Unity/wu_ros_tools/kalman_filter/: CMakeLists.txt  package.xml
ROS/src/Gopher-ROS-Unity/wu_ros_tools/kalman_filter/src/kalman_filter/: __init__.py
ROS/src/Gopher-ROS-Unity/wu_ros_tools/rosbaglive/: CMakeLists.txt  package.xml
ROS/src/Gopher-ROS-Unity/wu_ros_tools/rosbaglive/scripts/: play.py
ROS/src/Gopher-ROS-Unity/wu_ros_tools/wu_ros_tools/: package.xml
docs/model/: Navigation.yml
(+19 files in other folders)
