<?xml version="1.0"?>
<package format="2">
  <name>freight_unity_endpoint</name>
  <version>0.0.0</version>
  <description>The freight_unity_endpoint package</description>

  <maintainer email="dboby@wpi.edu">Denny Boby</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <author email="dboby@wpi.edu">Denny Boby</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
