<?xml version="1.0"?>
<package>
  <name>timed_path_follower</name>
  <version>0.0.0</version>
  <description>
     The timed_path_follower package provides a local planner for differential drive
     robots to follow dynamically feasible, time dependent global paths.
     The planner can be used as a local planner plugin for the ROS navigation stack
  </description>
  <maintainer email="marinakollmitz@gmail.com">Marina Kollmitz</maintainer>
  <license>BSD</license>

  <author>Marina Kollmitz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2_ros</run_depend>

  <export>
    <nav_core plugin="${prefix}/path_follower_plugin.xml" />
  </export>

</package>
