<package format="2">
  <name>easy_markers</name>
  <version>0.2.6</version>
  <description>Python library to assist in publishing markers easily</description>
  <author>David V. Lu!!</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/easy_markers</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <test_depend>roslint</test_depend>
</package>
