<package format="2">
  <name>joy_listener</name>
  <version>0.2.6</version>
  <description>Translates joy msgs</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/joy_listener</url>
  <author email="davidvlu@gmail.com">David V. Lu!!</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <test_depend>roslint</test_depend>
</package>
