<package format="2">
  <name>rosbaglive</name>
  <version>0.2.6</version>
  <description>Plays rosbags as though they were happening NOW.</description>
  <author>David V. Lu!!</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosbaglive</url>
  <!-- <url type="bugtracker"></url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosbag</depend>
  <depend>rospy</depend>
  <test_depend>roslint</test_depend>

</package>
